--- a/Storm Viewer 2/Base.lproj/Main.storyboard
+++ b/Storm Viewer 2/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,21 +14,49 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Cza-zd-m2w">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3d-4w-VKM">
-                            <size key="itemSize" width="128" height="128"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3d-4w-VKM">
+                            <size key="itemSize" width="140" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="8ML-os-b8p">
-                                <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Image" id="8ML-os-b8p" customClass="ImageCell" customModule="Storm_Viewer_2" customModuleProvider="target">
+                                <rect key="frame" x="10" y="10" width="140" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hdK-Kn-9ux">
-                                    <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="140" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gW3-hK-9m7">
+                                            <rect key="frame" x="10" y="10" width="120" height="120"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWm-fJ-AAd">
+                                            <rect key="frame" x="10" y="134" width="120" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="3kV-AI-YaM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="JWm-fJ-AAd" firstAttribute="top" secondItem="gW3-hK-9m7" secondAttribute="bottom" constant="4" id="1s4-L9-l22"/>
+                                        <constraint firstAttribute="bottom" secondItem="JWm-fJ-AAd" secondAttribute="bottom" constant="6" id="4Mo-z2-HaG"/>
+                                        <constraint firstItem="gW3-hK-9m7" firstAttribute="top" secondItem="hdK-Kn-9ux" secondAttribute="top" constant="10" id="EGk-LY-2ja"/>
+                                        <constraint firstItem="JWm-fJ-AAd" firstAttribute="leading" secondItem="gW3-hK-9m7" secondAttribute="leading" id="cUZ-EO-9CN"/>
+                                        <constraint firstItem="JWm-fJ-AAd" firstAttribute="centerX" secondItem="hdK-Kn-9ux" secondAttribute="centerX" id="kXn-ah-Usg"/>
+                                        <constraint firstItem="JWm-fJ-AAd" firstAttribute="trailing" secondItem="gW3-hK-9m7" secondAttribute="trailing" id="pmb-sH-Ryk"/>
+                                        <constraint firstItem="JWm-fJ-AAd" firstAttribute="leading" secondItem="hdK-Kn-9ux" secondAttribute="leading" constant="10" id="tuZ-7n-Biq"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="imageLabel" destination="JWm-fJ-AAd" id="v2A-4e-kLB"/>
+                                    <outlet property="imageView" destination="gW3-hK-9m7" id="Gyp-ai-xmf"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -62,9 +89,4 @@
             <point key="canvasLocation" x="-529.00763358778624" y="10.563380281690142"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
