--- a/Storm Viewer 2/Base.lproj/Main.storyboard
+++ b/Storm Viewer 2/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,6 +72,21 @@
             </objects>
             <point key="canvasLocation" x="397.70992366412213" y="10.563380281690142"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="6Xy-H6-DEv">
+            <objects>
+                <viewController storyboardIdentifier="Detail" id="lEF-ZW-SuH" customClass="DetailViewController" customModule="Storm_Viewer_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Kk-He-kgL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="LJ7-qA-Mnk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v2Q-8a-A1I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1175" y="11"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="odZ-yl-y2c">
             <objects>
@@ -89,4 +106,9 @@
             <point key="canvasLocation" x="-529.00763358778624" y="10.563380281690142"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
